--- a/Tadekam.html
+++ b/Tadekam.html
@@ -919,136 +919,200 @@
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-2 col-lg-3 galleryImage">
+							<div class="col-xs-12 col-lg-3 galleryImage">
 								<div class="row">
-									<img src="images/galleryimage_01.jpg" alt="">
+									<div class="col-xs-2 hideForDesktop"></div>
+									<div class="col-xs-8 col-lg-12">
+										<img src="images/galleryimage_01.jpg" alt="">
+									</div>
+									<div class="col-xs-2 hideForDesktop"></div>
 								</div>
 								<div class="row galleryImageDescription">
 									Guruji With Govindagiri Swami
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_02.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_02.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Tapas 2010
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_03.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_03.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Guruji Naushir Performing Pada Puja
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_04.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_04.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Guruji Naushir & Govindagiri Swami
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_05.jpg" alt="">
-								</div>
+								<div class="col-xs-12 col-lg-3 galleryImage">
+										<div class="row">
+											<div class="col-xs-2 hideForDesktop"></div>
+											<div class="col-xs-8 col-lg-12">
+												<img src="images/galleryimage_05.jpg" alt="">
+											</div>
+											<div class="col-xs-2 hideForDesktop"></div>
+										</div>
 								<div class="row galleryImageDescription">
 									Grihapravesh Dhyanmandir, Pune
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_06.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_06.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Grihapravesh Dhyanmandir, Pune
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_07.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_07.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Dhyanmandir, Pune
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_08.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_08.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Raw Himalayan Beauty
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_09.jpg" alt="">
-								</div>
+								<div class="col-xs-12 col-lg-3 galleryImage">
+										<div class="row">
+											<div class="col-xs-2 hideForDesktop"></div>
+											<div class="col-xs-8 col-lg-12">
+												<img src="images/galleryimage_09.jpg" alt="">
+											</div>
+											<div class="col-xs-2 hideForDesktop"></div>
+										</div>
 								<div class="row galleryImageDescription">
 									Neelkanth
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_10.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_10.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Badrinath Falls
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_11.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_11.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Rangrasiya Mela for 350 underpriviledged children
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_12.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_12.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Rangrasiya Coloring Activity
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_13.jpg" alt="">
-								</div>
+								<div class="col-xs-12 col-lg-3 galleryImage">
+										<div class="row">
+											<div class="col-xs-2 hideForDesktop"></div>
+											<div class="col-xs-8 col-lg-12">
+												<img src="images/galleryimage_13.jpg" alt="">
+											</div>
+											<div class="col-xs-2 hideForDesktop"></div>
+										</div>
 								<div class="row galleryImageDescription">
 									Rangrasiya Coloring Activity with Senior Girls
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_14.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_14.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Guruji interacting with children
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_15.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_15.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Releasing of balloons in Rangrasiya Mela
 								</div>
 							</div>
-							<div class="col-xs-2 col-lg-3 galleryImage">
-								<div class="row">
-									<img src="images/galleryimage_16.jpg" alt="">
-								</div>
+							<div class="col-xs-12 col-lg-3 galleryImage">
+									<div class="row">
+										<div class="col-xs-2 hideForDesktop"></div>
+										<div class="col-xs-8 col-lg-12">
+											<img src="images/galleryimage_16.jpg" alt="">
+										</div>
+										<div class="col-xs-2 hideForDesktop"></div>
+									</div>
 								<div class="row galleryImageDescription">
 									Team Tadekam with members Trustees of Nirmany (NGO)
 								</div>
@@ -1057,7 +1121,7 @@
 					</div>
 					<div class="col-xs-1 col-lg-1"></div>
 				</div>
-				<div class="row">
+				<div class="row galleryChildrensRow">
 					<div class="col-xs-1 col-lg-1"></div>
 					<div class="col-xs-10 col-lg-10">
 						<div class="row headerOfContentRow">
@@ -1077,19 +1141,31 @@
 									<div class="col-xs-2 hideForDesktop"></div>
 								</div>
 							</div>
-							<div class="col-xs-8 col-lg-3 galleryImage">
+							<div class="col-xs-12 col-lg-3 galleryImage">
 								<div class="row">
-									<img src="images/galleryimage_children_02.jpg" alt="">
+									<div class="col-xs-2 hideForDesktop"></div>
+									<div class="col-xs-8 col-lg-12">
+										<img src="images/galleryimage_children_02.jpg" alt="">
+									</div>
+									<div class="col-xs-2 hideForDesktop"></div>
 								</div>
 							</div>
-							<div class="col-xs-8 col-lg-3 galleryImage">
+							<div class="col-xs-12 col-lg-3 galleryImage">
 								<div class="row">
-									<img src="images/galleryimage_children_03.jpg" alt="">
+									<div class="col-xs-2 hideForDesktop"></div>
+									<div class="col-xs-8 col-lg-12">
+										<img src="images/galleryimage_children_03.jpg" alt="">
+									</div>
+									<div class="col-xs-2 hideForDesktop"></div>
 								</div>
 							</div>
-							<div class="col-xs-8 col-lg-3 galleryImage">
+							<div class="col-xs-12 col-lg-3 galleryImage">
 								<div class="row">
-									<img src="images/galleryimage_children_04.jpg" alt="">
+									<div class="col-xs-2 hideForDesktop"></div>
+									<div class="col-xs-8 col-lg-12">
+										<img src="images/galleryimage_children_04.jpg" alt="">
+									</div>
+									<div class="col-xs-2 hideForDesktop"></div>
 								</div>
 							</div>
 						</div>
