Media page videos

--- a/Tadekam.html
+++ b/Tadekam.html
@@ -1260,22 +1260,22 @@
 			<div class="row mainContent" id="mainContentMediaMenu">
 				<div class="row">
 					<div class="col-xs-12 col-16-12 bannerContactUs">
-						<img src="images/banner_contact_us.png" alt="Banner Programs">
+						<img src="images/banner_media.png" alt="Banner Programs">
 					</div>
 				</div>
 				<div class="row mediaContainer">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
 						<div class="row">
-							<div class="col-xs-5 col-lg-5"></div>
-							<div class="col-xs-2 col-lg-2">
-								<ul class="nav nav-pills nav-justified">
+							<div class="col-xs-3 col-lg-5"></div>
+							<div class="col-xs-6 col-lg-2">
+								<ul class="nav nav-pills">
 									<li class="active"><a data-toggle="pill" href="#books">Books</a></li>
-									<li>/</li>
+									<li><a>/</a></li>
 									<li><a data-toggle="pill" href="#videos">Videos</a></li>
 								</ul>
 							</div>
-							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-3 col-lg-5"></div>
 						</div>
 						<div class="tab-content">
 							<div id="books" class="tab-pane fade in active">
