--- a/Tadekam.html
+++ b/Tadekam.html
@@ -1263,6 +1263,24 @@
 						<img src="images/banner_media.png" alt="Banner Programs">
 					</div>
 				</div>
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						Media
+						<div class="row">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
 				<div class="row mediaContainer">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
@@ -1283,79 +1301,94 @@
 							</div>
 							<div id="videos" class="tab-pane fade">
 								<div class="row">
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/iza8tDZKW-w?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/3DHphl_qLBs?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/QjqqTzpj_xw?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/QmtIRy8r4dk?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/-bBmQmMtFzM?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/DDKI2KPh1KY?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/-4NtATdDDPI?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/_EmxA34uztM?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/N6ngtnJssSI?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/wy7mtA-pZbo?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/pIUkYsBXxsY?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/tgBFTjyXz8k?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/Eu06tZnXEwg?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/RqKf-pYgfcw?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
-									<div class="col-xs-12 col-lg-4">
+									<div class="col-xs-12 col-lg-4 videoHolder">
 										<iframe
-											src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+											src="https://www.youtube.com/embed/pv_7DunISNw?controls=1"
+											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>
 								</div>
