Media Page Books

--- a/Tadekam.html
+++ b/Tadekam.html
@@ -499,44 +499,46 @@
 						<div class="col-xs-5 col-lg-5"></div>
 					</div>
 				</div>
-				<div class="row headerOfContentRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8 titleContentHeader">
-						Team Tadekam
-						<div class="row">
-							<div class="col-xs-5 col-lg-5"></div>
-							<div class="col-xs-2 col-lg-2">
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
+				<div class="teamTadekamBackground">
+					<div class="row headerOfContentRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8 titleContentHeader">
+							Team Tadekam
+							<div class="row">
+								<div class="col-xs-5 col-lg-5"></div>
+								<div class="col-xs-2 col-lg-2">
+									<div class="row">
+										<div class="col-xs-2 col-lg-4"></div>
+										<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+										<div class="col-xs-2 col-lg-4"></div>
+									</div>
 								</div>
+								<div class="col-xs-5 col-lg-5"></div>
 							</div>
-							<div class="col-xs-5 col-lg-5"></div>
 						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row textRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						The balance sheet of Tadekam has only one asset. The asset comprises of the  small but growing number of deeply committed individuals who train and work  under the Tadekam banner. The collective aim of every individual associated  with Tadekam is common. That is to accomplish the vision spelt out in the  mission statement. 
+					<div class="row textRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							The balance sheet of Tadekam has only one asset. The asset comprises of the  small but growing number of deeply committed individuals who train and work  under the Tadekam banner. The collective aim of every individual associated  with Tadekam is common. That is to accomplish the vision spelt out in the  mission statement. 
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row textRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						What is unique is that all teachers, organizers, coordinators and supporters,  work for the organization without any agenda of profit or personal recognition.  Their motive is completely altruistic and no effort is spared to fulfill the  organization's primary goal of taking humanity from suffering and ignorance  to enlightenment. 
+					<div class="row textRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							What is unique is that all teachers, organizers, coordinators and supporters,  work for the organization without any agenda of profit or personal recognition.  Their motive is completely altruistic and no effort is spared to fulfill the  organization's primary goal of taking humanity from suffering and ignorance  to enlightenment. 
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row textRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						All Tadekam Teachers hold the license to teach the various courses and the  programs as designed by the founder Guruji Naushir.
+					<div class="row textRow">
+						<div class="col-xs-2 col-lg-2"></div>
+						<div class="col-xs-8 col-lg-8">
+							All Tadekam Teachers hold the license to teach the various courses and the  programs as designed by the founder Guruji Naushir.
+						</div>
+						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentProgramsMenu">
@@ -1281,121 +1283,166 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
+				<div class="row">
+					<div class="col-xs-4 col-lg-5"></div>
+					<div class="col-xs-4 col-lg-2">
+						<ul class="nav nav-pills nav-justified">
+							<li class="active"><a data-toggle="pill" href="#books">Books</a></li>
+							<li><a>/</a></li>
+							<li><a data-toggle="pill" href="#videos">Videos</a></li>
+						</ul>
+					</div>
+					<div class="col-xs-4 col-lg-5"></div>
+				</div>
 				<div class="row mediaContainer">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						<div class="row">
-							<div class="col-xs-3 col-lg-5"></div>
-							<div class="col-xs-6 col-lg-2">
-								<ul class="nav nav-pills">
-									<li class="active"><a data-toggle="pill" href="#books">Books</a></li>
-									<li><a>/</a></li>
-									<li><a data-toggle="pill" href="#videos">Videos</a></li>
-								</ul>
-							</div>
-							<div class="col-xs-3 col-lg-5"></div>
-						</div>
+					<div class="col-xs-12 col-lg-12">
 						<div class="tab-content">
 							<div id="books" class="tab-pane fade in active">
-								Books
+								<div class="row bookImageContainer">
+									<div class="col-xs-12 col-lg-12">
+										<div class="row">
+											<div class="col-xs-1 col-lg-4"></div>
+											<div class="col-xs-10 col-lg-4">
+												"AMRIT" Wisdom of Mahavtar Babaji in the words of Guruji Naushir
+											</div>
+											<div class="col-xs-1 col-lg-4"></div>
+										</div>
+									</div>
+								</div>
+								<div class="row bookDescription">
+									<div class="col-xs-1 col-lg-2"></div>
+									<div class="col-xs-10 col-lg-8">
+										Amrit originates from Sanskrit amrita, which means Immortal. Amrit - the book is a work of deep love and wisdom from the immortal sage Mahavtar Babaji as communicated to Guruji Naushir. It is a guide to practical spirituality filled with incisive insights and spiced with love and humour. It touches all aspects of life and enumerates on how to be in the world, but not OF this world; making our journey on the planet balanced, enjoyable and elevating. This book is a collection of articles written by Guruji Naushir, to communicate with his numerous followers during the years he was doing tapas. Many of his disciples have asked questions pertaining to his though provoking articles. This to and fro communication has also been included, as it reveals a fresh perspective or clarifies the point more lucidly.
+										<div class="row">
+											<div class="btn btn-primary"><a href="#">Buy Now</a></div>
+										</div>
+									</div>
+									<div class="col-xs-1 col-lg-2"></div>
+								</div>
+								<div class="row bookImageContainer">
+									<div class="col-xs-12 col-lg-12">
+										<div class="row">
+											<div class="col-xs-1 col-lg-4"></div>
+											<div class="col-xs-10 col-lg-4">
+												"THE ECHO WITHIN" 365 Showers of Nectar
+											</div>
+											<div class="col-xs-1 col-lg-4"></div>
+										</div>
+									</div>
+								</div>
+								<div class="row bookDescription">
+									<div class="col-xs-1 col-lg-2"></div>
+									<div class="col-xs-10 col-lg-8">
+										Amrit originates from Sanskrit amrita, which means Immortal. Amrit - the book is a work of deep love and wisdom from the immortal sage Mahavtar Babaji as communicated to Guruji Naushir. It is a guide to practical spirituality filled with incisive insights and spiced with love and humour. It touches all aspects of life and enumerates on how to be in the world, but not OF this world; making our journey on the planet balanced, enjoyable and elevating. This book is a collection of articles written by Guruji Naushir, to communicate with his numerous followers during the years he was doing tapas. Many of his disciples have asked questions pertaining to his though provoking articles. This to and fro communication has also been included, as it reveals a fresh perspective or clarifies the point more lucidly.
+										<div class="row">
+											<div class="btn btn-primary"><a href="#">Buy Now</a></div>
+										</div>
+									</div>
+									<div class="col-xs-1 col-lg-2"></div>
+								</div>
 							</div>
 							<div id="videos" class="tab-pane fade">
 								<div class="row">
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/iza8tDZKW-w?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
+									<div class="col-xs-2 col-lg-1"></div>
+									<div class="col-xs-8 col-lg-10">
+										<div class="row">
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/iza8tDZKW-w?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/3DHphl_qLBs?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/QjqqTzpj_xw?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/QmtIRy8r4dk?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/-bBmQmMtFzM?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/DDKI2KPh1KY?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/-4NtATdDDPI?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/_EmxA34uztM?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/N6ngtnJssSI?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/wy7mtA-pZbo?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/pIUkYsBXxsY?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/tgBFTjyXz8k?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/Eu06tZnXEwg?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/RqKf-pYgfcw?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+											<div class="col-xs-12 col-lg-4 videoHolder">
+												<iframe
+													src="https://www.youtube.com/embed/pv_7DunISNw?controls=1"
+													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+												</iframe>
+											</div>
+										</div>
 									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/3DHphl_qLBs?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/QjqqTzpj_xw?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/QmtIRy8r4dk?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/-bBmQmMtFzM?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/DDKI2KPh1KY?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/-4NtATdDDPI?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/_EmxA34uztM?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/N6ngtnJssSI?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/wy7mtA-pZbo?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/pIUkYsBXxsY?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/tgBFTjyXz8k?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/Eu06tZnXEwg?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/RqKf-pYgfcw?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
-									<div class="col-xs-12 col-lg-4 videoHolder">
-										<iframe
-											src="https://www.youtube.com/embed/pv_7DunISNw?controls=1"
-											frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-										</iframe>
-									</div>
+									<div class="col-xs-1 col-lg-1 hideForMobile"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
 				</div>
 			</div>
 			<div class="row footer">
